Add profile link to the navbar
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -75,6 +75,9 @@
                         <li>
                             <a href="{{ path('fos_user_security_logout') }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
                         </li>
+                        <li class="pull-right">
+                            <a href="{{ path('UMRA_Person_Profile') }}"><span class="fa fa-user"></span> My Membership</a>
+                        </li>
                     </ul>
                     {% else %}
                     <ul class="nav-umra">
