Throw the Person detail fragment into the Person profile overview tab
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
@@ -11,9 +11,7 @@
     </ul>
     <div class="tab-content">
         <div class="tab-pane fade in active" id="overview">
-            <p>
-                Future: Put transactions, etc.
-            </p>
+            {% include 'UMRAMemberBundle:Person:detail.html.twig' with { 'entity': user } %}
         </div>
         <div class="tab-pane fade" id="household">
             <br />
