Add missing label CSS class
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/detail.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/detail.html.twig
@@ -16,7 +16,7 @@
                     {% if residence.primary %}
                         <span class="label label-success">Primary</span>
                     {% else %}
-                        <span class="label">Secondary</span>
+                        <span class="label label-default">Secondary</span>
                     {% endif %}
                 </td>
                 <td>
