Cleanup login form
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -8,7 +8,7 @@
     {% endfor %}
 
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-xs-12">
             {% block fos_user_content %}
             {% endblock fos_user_content %}
         </div>
