--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
@@ -155,14 +155,16 @@
 					<div class="form-group">
 						<label class="control-label">Membership Status</label>
 						<div>
+							{# Corresponds to membershipStatus field in RegistrationFormType with the addition of ng-model attributes that were not getting output in the correct places through Twig generated HTML elements. #}
+							{% do form.membershipStatus.setRendered %}
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="membership_status" ng-model="memberStatus" value="new" /> New Member
+									<input type="radio" name="register[membershipStatus]" ng-model="memberStatus" value="new" /> New Member
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="membership_status" ng-model="memberStatus" value="renew" /> Renewing Member
+									<input type="radio" name="register[membershipStatus]" ng-model="memberStatus" value="renew" /> Renewing Member
 								</label>
 							</div>
 						</div>
@@ -170,24 +172,26 @@
 					<div class="form-group">
 						<label class="control-label">Membership Type</label>
 						<div>
+							{# Corresponds to membershipType field in RegistrationFormType with the addition of ng-model & ng-if attributes that were not possible through the Twig generated HTML elements. #}
+							{% do form.membershipType.setRendered %}
 							<div class="radio-inline" ng-if="memberStatus === 'new'">
 								<label>
-									<input type="radio" name="membership_type" ng-model="costs.member" value="10" /> Single ($10)
+									<input type="radio" name="register[membershipType]" ng-model="costs.member" value="10" /> Single ($10)
 								</label>
 							</div>
 							<div class="radio-inline" ng-if="memberStatus === 'new'">
 								<label>
-									<input type="radio" name="membership_type" ng-model="costs.member" value="15" /> Couple ($15)
+									<input type="radio" name="register[membershipType]" ng-model="costs.member" value="15" /> Couple ($15)
 								</label>
 							</div>
 							<div class="radio-inline" ng-if="memberStatus === 'renew'">
 								<label>
-									<input type="radio" name="membership_type" ng-model="costs.member" value="25" /> Single ($25)
+									<input type="radio" name="register[membershipType]" ng-model="costs.member" value="25" /> Single ($25)
 								</label>
 							</div>
 							<div class="radio-inline" ng-if="memberStatus === 'renew'">
 								<label>
-									<input type="radio" name="membership_type" ng-model="costs.member" value="35" /> Couple ($35)
+									<input type="radio" name="register[membershipType]" ng-model="costs.member" value="35" /> Couple ($35)
 								</label>
 							</div>
 						</div>
@@ -195,19 +199,20 @@
 					<div class="form-group">
 						<label class="control-label">Pre-purchase First 7 Luncheons</label>
 						<div>
+							{% do form.luncheonPreorder.setRendered %}
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="luncheon_preorder" ng-model="costs.luncheon" value="112" /> Single ($112)
+									<input type="radio" name="register[luncheonPreorder]" ng-model="costs.luncheon" value="112" /> Single ($112)
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="luncheon_preorder" ng-model="costs.luncheon" value="224" /> Couple ($224)
+									<input type="radio" name="register[luncheonPreorder]" ng-model="costs.luncheon" value="224" /> Couple ($224)
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="luncheon_preorder" ng-model="costs.luncheon" value="0" /> Do not pre-purchase
+									<input type="radio" name="register[luncheonPreorder]" ng-model="costs.luncheon" value="0" /> Do not pre-purchase
 								</label>
 							</div>
 						</div>
@@ -215,24 +220,25 @@
 					<div class="form-group">
 						<label class="control-label">Please send me discount parking coupons with my membership card</label>
 						<div>
+							{% do form.parkingCoupon.setRendered %}
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="parking_coupon" ng-model="counts.parkingCoupons" value="1" checked /> 1
+									<input type="radio" name="register[parkingCoupon]" ng-model="counts.parkingCoupons" value="1" /> 1
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="parking_coupon" ng-model="counts.parkingCoupons" value="3" /> 3
+									<input type="radio" name="register[parkingCoupon]" ng-model="counts.parkingCoupons" value="3" /> 3
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="parking_coupon" ng-model="counts.parkingCoupons" value="6" /> 6
+									<input type="radio" name="register[parkingCoupon]" ng-model="counts.parkingCoupons" value="6" /> 6
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="parking_coupon" ng-model="counts.parkingCoupons" value="9" /> 9
+									<input type="radio" name="register[parkingCoupon]" ng-model="counts.parkingCoupons" value="9" /> 9
 								</label>
 							</div>
 						</div>
@@ -245,19 +251,15 @@
 							<div class="col-xs-4 col-sm-3">
 								<div class="input-group">
 									<span class="input-group-addon">$</span>
-									<input type="text" name="total_cost" ng-model="costs.total" class="form-control" readonly="readonly" />
+									<input type="text" ng-model="costs.total" class="form-control" readonly="readonly" />
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="panel-footer">
-					<button id="payCredit" name="payCredit" type="submit" class="btn btn-primary">
-						<span class="fa fa-credit-card"></span> Pay by Credit Card
-					</button>
-					<button id="payCheck" name="payCheck" type="submit" class="btn btn-link">
-						<span class="fa fa-print"></span> Print &amp; Pay by Check
-					</button>
+					{{ form_widget(form.payCreditCard) }}
+					{{ form_widget(form.payCheck) }}
 				</div>
 			</div>
 		{{ form_end(form) }}
