Add initial renewal form type
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
@@ -30,6 +30,9 @@
                     </form>
                 </div>
             </div>
+            <div class="col-sm-6">
+                {% include 'UMRAMemberBundle:Registration:renew_panel.html.twig' with {'form': renewalForm } %}
+            </div>
         </div>
     </div>
     {% endblock %}
