Fix issue where current date would be shown if date field was empty
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/detail.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/detail.html.twig
@@ -86,7 +86,7 @@
                     <span class="label label-success">Active</span>
                 {% endif %}
                 </td>
-                <td>{{ person.membersince | date("m/d/Y") }}</td>
+                <td>{{ person.membersince is empty ? "" : person.membersince|date('m/d/Y') }}</td>
                 <td>
                     <ul class="list-unstyled">
                         {% for email in person.emails %}
