Add forgot password link
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -37,6 +37,9 @@
         <a href="{{ path('UMRA_register') }}" class="btn btn-lg btn-primary">
             Register
         </a>
+        <a href="{{ path('fos_user_resetting_request') }}" class="btn btn-lg btn-default">
+            Forgot password?
+        </a>
     </div>
 </div>
 {% endblock fos_user_content %}
