Add missing spouse/secondary member field to registration form
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
@@ -66,6 +66,7 @@
 						<div class="row">
 							<div class="col-sm-4">
 								{{ form_row(member.newsPref) }}
+								{{ form_row(member.spouse) }}
 							</div>
 							{% if loop.index == 1 %}
 							<div class="col-sm-4">
@@ -356,7 +357,10 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-4">
-
+				<div class="form-group">
+					{{ form_label(form.members.vars.prototype.spouse) }}
+					{{ form_widget(form.members.vars.prototype.spouse) }}
+				</div>
 			</div>
 			<div class="col-sm-8">
 
