Swap in the new headers and footers
Resolves #6

Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/web/css/application.css
+++ b/web/css/application.css
@@ -15,159 +15,15 @@ body {
 a {
 	color: #900021;
 }
-#campus-header-wrapper {
-	display: none;
-}
-#sub-header-site-name {
-	background-color: #ffcc33;
-	background: -moz-radial-gradient(top center, #fff666 20px, #ffcc33);
-	background: -webkit-radial-gradient(top center, #fff666 20px, #ffcc33);
-	background: radial-gradient(top center, #fff666 20px, #ffcc33);
-}
-#sub-header, #sub-header-site-name .pane-variable-site-name, #footer-wrapper {
-	width: 100%;
-	max-width: 1200px;
-	margin-left: auto;
-	margin-right: auto;
-}
-#sub-header-site-name .pane-variable-site-name {
-	padding: 1em;
-	font-size: 130%;
-	line-height: 1.2em;
-	color: #333333;
-}
-#sub-header {
-	border: 1px solid #5b0013;
-	-moz-box-shadow: 0 0 3px #5b0013;
-	-webkit-box-shadow: 0 0 3px #5b0013;
-	box-shadow: 0 0 3px #5b0013;
-	background-color: #ffffff;
-	width: 100%;
-}
-#header-wrapper-full-width {
-	background: -moz-linear-gradient(#5b0013, #39000c);
-	background: -webkit-linear-gradient(#5b0013, #39000c);
-	background: linear-gradient(#5b0013, #39000c);
-}
-#header-wrapper-internal {
-	border: 1px solid #5b0013;
-	clear: both;
-	-moz-box-shadow: 0 0 3px #5b0013;
-	-webkit-box-shadow: 0 0 3px #5b0013;
-	box-shadow: 0 0 3px #5b0013;
-}
-#full-page-wrapper, #mandatory-footer-wrapper, #header-wrapper-internal {
-	width: 100%;
-	max-width: 1200px;
-	margin-left: auto;
-	margin-right: auto;
-}
 #full-page-wrapper {
-	position: relative;
-	top: -4px;
-	background-color: white;
-	padding-top: 4px;
-	padding-bottom: 1px;
-	border-right: 1px solid #fc3;
-	border-left: 1px solid #fc3;
-}
-#header-wrapper-internal, #page {
-	position: relative;
-	top: -4px;
-}
-.nav-umra .logged-in-user {
-	float: right;
-	color: #efefef;
-}
-.nav-umra {
 	width: 100%;
-	margin: 0;
-	padding: 4px 10px 8px;
-	min-height: 2em;
-	background-color: #710019;
-	clear: both;
-	background-image: -moz-linear-gradient(top, #7a0019, #600014);
-	background-image: -webkit-linear-gradient(top, #7a0019, #600014);
-	background-image: linear-gradient(to bottom, #7a0019, #600014);
-	filter: progid:DXImageTransform.Microsoft.gradient(gradientType=0, startColorstr='#FF7A0019', endColorstr='#FF600014');
-	background-color: transparent;
-	box-shadow: none;
-}
-.nav-umra li {
-	display: block;
-	width: 100%;
-	text-align: center;
-	margin-bottom: 2px;
-}
-.nav-umra a {
-	display: block;
-	padding: 6px;
-	line-height: 1.1em;
-	text-align: center;
-	text-shadow: 0 -2px 2px rgba(91, 0, 19, 0.5);
-	text-decoration: none;
-	border: 1px solid #ba5e28;
-	-moz-border-radius: 5px 5px;
-	-webkit-border-radius: 5px;
-	border-radius: 5px 5px;
-}
-.nav-umra a, .nav-umra a:visited {
-	color: white;
-}
-.nav-umra a.active {
-	color: #000;
-}
-.nav-umra li.active a {
-	text-shadow: none;
-	color: #5b0013;
-	background-image: -moz-radial-gradient(center 3%, ellipse farthest-side, #fff666, #ffcc33 100%);
-	background-image: -webkit-radial-gradient(center 3%, ellipse farthest-side, #fff666, #ffcc33 100%);
-	background-image: radial-gradient(center 3%, ellipse farthest-side, #fff666, #ffcc33 100%);
-}
-.nav-umra a:hover,
-.nav-umra li.active a:hover,
-.nav-umra li.active a:focus,
-.nav-umra a:focus {
-	color: #ffcc33;
-	border-color: #a10025;
-	background-color: #a10025;
-	background-image: none;
-	text-shadow: none;
+	margin-left: auto;
+	margin-right: auto;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	background-color: #fefefe;
 }
 
 .sonata-ba-filter .col-xs-3 {
 	width: 100%;
-}
-
-@media (min-width: 459px) {
-	#campus-header-wrapper {
-		display: block;
-		background-color: white;
-	}
-	#campus-header-wrapper #campus-header {
-		max-width: 1200px;
-		margin-left: auto;
-		margin-right: auto;
-		font-size: 11px;
-		text-align: right;
-		line-height: 22px;
-	}
-	#campus-header-wrapper #campus-header p,
-	#campus-header-wrapper #campus-header ul,
-	#campus-header-wrapper #campus-header li {
-		padding: 0px 10px 0px 0px;
-		margin: 0;
-		display: inline-block;
-	}
-}
-@media only screen and (min-width: 520px) {
-	.nav-umra {
-		border-top: none;
-	}
-	.nav-umra li {
-		display: inline-block;
-		width: auto;
-		margin-top: 0;
-		margin-bottom: 0;
-	}
 }
