--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,119 +11,120 @@
         <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
         <link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet" type="text/css" />
         <link href="{{ asset('css/typeaheadjs.css') }}" rel="stylesheet" type="text/css" />
-        <link href="{{ asset('css/umnhf-drupal.css') }}" rel="stylesheet" type="text/css" />
+        <link href="{{ asset('css/2015-tc.css') }}" rel="stylesheet" type="text/css" />
+        <!--[if IE 8]>
+            <link rel="stylesheet" type="text/css" href="{{ asset('css/ie8.css') }}">
+        <![endif]-->
         <link href="{{ asset('css/application.css') }}" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <div id="campus-header-wrapper">
-            <div id="campus-header">
-                <p>Campuses:</p>
-                <ul class="umnhf">
-                    <li><a href="http://www1.umn.edu/twincities/index.html">Twin Cities</a></li>
-                    <li><a href="http://www1.crk.umn.edu/">Crookston</a></li>
-                    <li><a href="http://www.d.umn.edu">Duluth</a></li>
-                    <li><a href="http://www.morris.umn.edu/index.php">Morris</a></li>
-                    <li><a href="http://www.r.umn.edu">Rochester</a></li>
-                    <li><a href="http://www1.umn.edu/twincities/campuses/#other-locations">Other Locations</a></li>
+        <!-- Skip Links: Give your nav and content elements the appropriate ID attributes -->
+        <div id="skipLinks"><a href="#sub-header">Main navigation</a> | <a href="#full-page-wrapper">Main content</a></div>
+        <!-- BEGIN HEADER -->
+        <header class="umnhf" id="umnhf-h" role="banner">
+            <div class="printer"><div class="left"></div><div class="right"><strong>University of Minnesota</strong><br />http://www.umn.edu/<br />612-625-5000</div></div>
+            <div class="umnhf" id="umnhf-h-mast">
+                <a class="umnhf" id="umnhf-h-logo" href="http://www1.umn.edu/twincities/"><span>Go to the U of M home page</span></a>
+                <ul class="umnhf" id="umnhf-h-ql">
+                    <li><a href="http://onestop.umn.edu/">One Stop</a></li>
+                    <li class="umnhf"><a href="https://www.myu.umn.edu/">MyU <span></span>: For Students, Faculty, and Staff</a></li>
                 </ul>
+                <!-- Button below is for dropdown toggle, only visible on mobile screens. If using
+                a non-dropdown version you can delete this tag -->
+                <button class="umnhf" id="umnhf-m-search">Search</button>
             </div>
-        </div>
-        <div id="mandatory-header-wrapper" class="umnhf-campus-tc">
-            <div class="umnhf" id="umnhf-h">
-                <div class="umnhf" id="umnhf-h-mast">
-                    <a class="umnhf" id="umnhf-h-logo" href="http://umn.edu"><span>Go to the U of M home page</span></a>
-                    <ul class="umnhf" id="umnhf-h-ql">
-                        <li class="umnhf" id="umnhf-h-onestop"><a href="http://onestop.umn.edu"><span>One Stop</span></a></li>
-                        <li class="umnhf" id="umnhf-h-myu"><a href="http://myu.umn.edu"><span>myU</span></a></li>
-                    </ul>
-                    <button class="umnhf" id="umnhf-m-search" href="#">Search</button>
-                </div>
-                <div class="search-aria-wrapper" role="search">
-                    <form class="umnhf" id="umnhf-h-search" method="get" title="Search Websites and People" action="http://google.umn.edu/search" accept-charset="UTF-8">
-                        <div>
-                            <label class="umnhf" for="umnhf-h-st">Search</label>
-                            <div class="form-item form-type-textfield form-item-q">
-                                <input class="umnhf form-text" id="umnhf-h-st" placeholder="Search Websites and People" type="text" name="q" value="" size="60" maxlength="128" />
-                            </div>
-                            <input type="hidden" name="client" value="searchumn" />
-                            <input type="hidden" name="proxystylesheet" value="searchumn" />
-                            <input type="hidden" name="site" value="systemwide" />
-                            <input type="hidden" name="output" value="xml_no_dtd" />
-                            <input type="hidden" name="form_build_id" value="form-Kalsu7BBKz1Ddb6CQgOvukmo6EdJHFGkf-ApDpQlZbo" />
-                            <input type="hidden" name="form_id" value="umn_search_gsa7_form" />
-                            <div class="form-actions form-wrapper" id="edit-actions">
-                                <input class="umnhf form-submit" id="umnhf-h-sb" type="submit" name="op" value="Search" />
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-        <header id="sub-header-site-name">
-            <div class="panel-pane pane-token pane-variable-site-name">
-                University of Minnesota Retirees Association
+            <form class="umnhf" id="umnhf-h-search" action="http://search.umn.edu/tc/" method="get" title="Search Websites and People" role="search">
+                <label class="umnhf" for="umnhf-h-st">Search</label>
+                <input class="umnhf" id="umnhf-h-st" type="text" name="q" />
+                <input class="umnhf" id="umnhf-h-sb" type="submit" value="">
+            </form>
+        </header>
+        <!-- END HEADER -->
+        <!-- BEGIN OPTIONAL UNIT IDENTIFICATION AND NAVIGATION  -->
+        <div class="umnhf toggle display-after-menu-collapse" id="umnhf-alt-um">&#9776; <span class="visually-hidden">Main</span> Menu</div>
+        <header id="umnhf-alt" class="umnhf">
+            <nav id="umnhf-alt-n" role="navigation">
+                {% if app.user %}
+                <ul>
+                    <li>
+                        <a href="http://umra-dev.umn.edu">
+                            UMRA Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('UMRA_Person_Profile') }}">
+                            My Membership
+                        </a>
+                    </li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <li>
+                        <a href="{{ path('sonata_admin_redirect') }}">
+                            Membership Administration
+                        </a>
+                    </li>
+                    {% endif %}
+                    <li>
+                        <a href="{{ path('fos_user_security_logout') }}">
+                            Logout
+                        </a>
+                    </li>
+                </ul>
+                {% else %}
+                <ul>
+                    <li>
+                        <a href="http://umra-dev.umn.edu">
+                            UMRA Home
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('fos_user_security_login') }}">
+                            Login
+                        </a>
+                    </li>
+                </ul>
+                {% endif %}
+            </nav>
+            <div id="umnhf-alt-sn">
+                <h2>University of Minnesota Retirees Association</h2>
             </div>
         </header>
-        <section id="header-wrapper-full-width">
-            <div id="header-wrapper-internal">
-                <div id="sub-header" class="clearfix">
-                    {% if app.user %}
-                    <ul class="nav-umra">
-                        <li>
-                            <a href="http://umra-dev.umn.edu"><span class="glyphicon glyphicon-arrow-left"></span> Return to UMRA Home</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('fos_user_security_logout') }}"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
-                        </li>
-                        <li class="pull-right">
-                            <a href="{{ path('UMRA_Person_Profile') }}"><span class="fa fa-user"></span> My Membership</a>
-                        </li>
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <li class="pull-right">
-                                <a href="{{ path('sonata_admin_redirect') }}">
-                                    <span class="fa fa-cogs"></span>
-                                    Membership Administration
-                                </a>
-                            </li>
-                        {% endif %}
-                    </ul>
-                    {% else %}
-                    <ul class="nav-umra">
-                        <li><a href="{{ path('fos_user_security_login') }}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                    </ul>
-                    {% endif %}
-                </div>
+        <!-- END UNIT IDENTIFICATION AND NAVIGATION -->
+
+        <div id="full-page-wrapper">
+            <div class="container">
+                {% block body %}{% endblock %}
             </div>
-        </section>
-        <div id="full-page-wrapper" class="container-fluid">
-            {% block body %}{% endblock %}
         </div>
-        <footer id="mandatory-footer-wrapper" role="contentinfo">
-            <div id="umnhf-f" class="umnhf">
-                <div id="umnhf-f-cl" class="umnhf">
-                    <h2 class="umnhf">
-                        Twin Cities Campus:
-                    </h2>
-                    <ul class="umnhf">
-                        <li class="umnhf"><a class="umnhf" href="http://www.umn.edu/twincities/maps/index.html">Maps&nbsp;&amp;&nbsp;Directions</a></li>
-                        <li class="umnhf"><a class="umnhf" href="http://www1.umn.edu/pts/">Parking&nbsp;&amp;&nbsp;Transportation</a></li>
-                        <li class="umnhf"><a class="umnhf" href="http://www.umn.edu/twincities/contact/">Contact&nbsp;U&nbsp;of&nbsp;M</a></li>
-                        <li class="umnhf"><a class="umnhf" href="http://www1.umn.edu/twincities/privacy/">Privacy</a></li>
-                        <li class="umnhf"><a class="umnhf" href="http://www.directory.umn.edu/">Directories</a></li>
-                    </ul>
-                </div>
-                <div id="umnhf-f-bp" class="umnhf">
-                    <p>© 2014 Regents of the University of Minnesota. All rights reserved.</p>
-                    <p>
-                        <span class="eeoc-responsive-hide">The University of Minnesota is an</span><span class="eeoc-responsive-upcase"> equal</span> opportunity educator and employer.<span class="privacy-statement-responsive"> <a href="http://www1.umn.edu/twincities/privacy/">Privacy</a></span>
-                    </p>
-                </div>
-            </div>
+
+        <!-- BEGIN OPTIONAL UNIT FOOTER -->
+        <section id="umnhf-uf" class="umnhf">
+            <h2 class="visually-hidden">Contact Information</h2>
+            <address id="umnhf-uf-ci" class="umnhf">
+                <p class="umnhf-f-title">University of Minnesota Retirees Association</p>
+                <p>200 Oak Street SE, Minneapolis, MN, 55455-2002</p>
+                <p>Room 264, Suite 250</p>
+                <p><abbr title="Phone Number">P</abbr>: <a href="tel:6126264403">612-626-4403</a></p>
+                <p><a href="#">Email Us</a>: <a href="mailto:umra@umn.edu">umra@umn.edu</a></p>
+            </address>
+        </section>
+        <!-- END OPTIONAL UNIT FOOTER -->
+        <!-- BEGIN UofM FOOTER -->
+        <footer id="umnhf-f" class="umnhf" role="contentinfo">
+            <nav id="umnhf-f-myu">
+                <h3 class="umnhf-f-title visually-hidden">For Students, Faculty, and Staff</h3>
+                <ul>
+                    <li><a href="http://onestop.umn.edu/">One Stop</a></li>
+                    <li><a href="https://www.myu.umn.edu/">My U <span></span></a></li>
+                </ul>
+            </nav>
+            <small>&copy; <span id="cdate"></span> Regents of the University of Minnesota. All rights reserved. The University of Minnesota is an equal opportunity educator and employer. <a href="http://privacy.umn.edu">Privacy Statement</a></small>
         </footer>
+        <!-- END UofM FOOTER -->
         <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
             <!--[if lt IE 9]>
             <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
             <![endif]-->
+        <script src="{{ asset('js/umnhf-2015.js') }}" type="text/javascript"></script>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="https://code.jquery.com/jquery.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
