Switch to horizontal navigation
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -84,8 +84,10 @@
                 </ul>
                 {% endif %}
             </nav>
-            <div id="umnhf-alt-sn">
-                <h2>University of Minnesota Retirees Association</h2>
+            <div class="container">
+                <div id="umnhf-alt-sn">
+                    <h2>University of Minnesota Retirees Association</h2>
+                </div>
             </div>
         </header>
         <!-- END UNIT IDENTIFICATION AND NAVIGATION -->
