--- a/web/css/2015-tc.css
+++ b/web/css/2015-tc.css
@@ -18,7 +18,7 @@ body { margin: 0; }
   .printer { display: block; width: 100%; background-color: #fff; }
   .printer .right { padding-bottom: 10px; text-align: right; }
   .printer .left { float: left; }
-  .printer .left:after { content: url(../img/sprites/tc/D2D-print.png); }
+  .printer .left:after { content: url(../img/sprites/tc/M-print.png); }
   #umnhf-h .umnhf { display: none; } }
 #umnhf-h { zoom: 1; }
 #umnhf-h.umnhf { position: relative; min-height: 64px; background-color: #7a0019; }
@@ -27,12 +27,12 @@ body { margin: 0; }
 #umnhf-h a.umnhf:link, #umnhf-h a.umnhf:visited, #umnhf-h a.umnhf:hover, #umnhf-h a.umnhf:active { text-decoration: underline; color: #7a0019; }
 #umnhf-h a.umnhf:hover { color: #669; }
 
-#umnhf-h-mast { position: relative; min-height: 64px; max-width: 1200px; margin: 0 auto; background: #7a0019; }
+#umnhf-h-mast { position: relative; min-height: 64px; margin: 0 auto; background: #7a0019; }
 
-#umnhf-h-logo { display: block; float: left; overflow: hidden; width: 288px; height: 38px; margin: 13px 10px 13px 54px; white-space: nowrap; text-indent: 100%; background-size: 288px 67px; background: transparent url("../img/sprites/tc/D2D-gld-wht.png") 0 0 no-repeat; }
-@media only screen and (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 192dpi) { #umnhf-h-logo { background: transparent url("../img/sprites/tc/D2D-gld-wht@2x.png") 0 0 no-repeat; background-size: 288px auto; } }
+#umnhf-h-logo { display: block; float: left; overflow: hidden; width: 288px; height: 38px; margin: 13px 10px 13px 128px; white-space: nowrap; text-indent: 100%; background-size: 288px 67px; background: transparent url("../img/sprites/tc/M-gld-wht.png") 0 0 no-repeat; }
+@media only screen and (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 192dpi) { #umnhf-h-logo { background: transparent url("../img/sprites/tc/M-gld-wht@2x.png") 0 0 no-repeat; background-size: 288px auto; height: 34px; } }
 
-#umnhf-h-ql { position: absolute; top: 8px; right: 54px; width: auto; margin: 0; list-style-type: none; color: #fff; font-weight: 100; }
+#umnhf-h-ql { position: absolute; top: 8px; right: 128px; width: auto; margin: 0; list-style-type: none; color: #fff; font-weight: 100; }
 #umnhf-h-ql li { margin: 0; display: inline-block; margin-left: 1.25rem; }
 #umnhf-h-ql li a { text-decoration: none; font-weight: 100; color: #fff; }
 #umnhf-h-ql li a:hover, #umnhf-h-ql li a:active, #umnhf-h-ql li a:focus { text-decoration: underline; }
@@ -60,7 +60,7 @@ body { margin: 0; }
   #umnhf-h-cl, #umnhf-h-ql { display: none; }
   #umnhf-h-search { position: relative; top: auto; right: auto; display: block; width: 226px; margin: 10px 0 10px 17px; }
   #umnhf-h-mast { position: relative; height: 50px; background-position: left bottom; }
-  #umnhf-h-logo { display: block; background-position: 0 -38px; height: 29px; width: 246px; }
+  #umnhf-h-logo { display: block; background-position: 0 -37px; height: 30px; width: 250px; }
   #umnhf-h-search.mobile { position: relative; top: auto; right: auto; display: block; width: 225px; height: 30px; margin: 10px 0 5px 17px; }
   #umnhf-h .umnhf-m-cancel { color: #404d5b; }
   #umnhf-h-st { display: block; width: 192px; }
@@ -75,21 +75,24 @@ body { margin: 0; }
 #umnhf-alt-sn h2 { margin: 35px 0 0 0; padding: 0; color: #404d5b; font: normal normal normal 30px/40px Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; }
 #umnhf-alt-sn p { margin: 0 0 15px 0; padding: 0; color: #8a8a8a; font: normal normal normal 20px/26px Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; }
 
-#umnhf-alt-n { float: right; width: 30%; height: 184px; padding-right: 128px; }
-#umnhf-alt-n ul { height: 184px; padding: 0; list-style-type: none; text-align: right; font-weight: 300; }
-#umnhf-alt-n li { display: inline-block; width: 50%; text-align: left; }
-#umnhf-alt-n a { display: inline-block; box-sizing: border-box; width: 100%; font-weight: 300; padding: 0.5em; line-height: 20px; }
-#umnhf-alt-n a:link, #umnhf-alt-n a:active, #umnhf-alt-n a:visited { -webkit-transition: background-color 0.3s,border-color 0.3s; transition: background-color 0.3s,border-color 0.3s; text-decoration: none; color: #404d5b; border-bottom: none; font-size: 16px; }
-#umnhf-alt-n a:hover, #umnhf-alt-n a:focus { background-color: #dbdbdb; }
-#umnhf-alt-n a.active { color: #7a0019; font-weight: 500; background-color: #f0efee; }
-#umnhf-alt-n a.active:hover { background-color: #dbdbdb; }
+#umnhf-alt-sn { width: 100%; padding-left: 17px; }
+#umnhf-alt-sn p { margin: 0 0 35px 0; }
+
+#umnhf-alt-n { display: block; width: 100%; background-color: #f0efee; }
+#umnhf-alt-n ul { display: table; margin: 0; padding: 0; table-layout: fixed; list-style-type: none; text-align: center; }
+#umnhf-alt-n ul li { display: inline-block; display: table-cell; width: 2%; }
+#umnhf-alt-n ul a { display: inline-block; box-sizing: border-box; width: 100%; font-weight: 300; padding: 0 0.5em; line-height: 36px; }
+#umnhf-alt-n ul a:link, #umnhf-alt-n ul a:active { -webkit-transition: background-color 0.3s,border-color 0.3s; transition: background-color 0.3s,border-color 0.3s; text-decoration: none; color: #404d5b; border-bottom: none; font-size: 16px; }
+#umnhf-alt-n ul a:visited { color: #404d5b; }
+#umnhf-alt-n ul a:hover, #umnhf-alt-n ul a:focus { background-color: #dbdbdb; }
+#umnhf-alt-n ul a.active { color: #7a0019; font-weight: 500; background-color: #f0efee; }
+#umnhf-alt-n ul a.active:hover { background-color: #dbdbdb; }
 
 .display-after-menu-collapse.umnhf { display: none; }
 @media (max-width: 775px) { .display-after-menu-collapse.umnhf { display: block; width: 100%; cursor: pointer; text-align: center; color: #fff; background-color: #404d5b; font: 300 normal normal 28px/50px Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; } }
 
 @media screen and (max-width: 1200px) { #umnhf-alt.umnhf { width: 100%; padding: 0; }
-  #umnhf-alt-sn { width: 60%; }
-  #umnhf-alt-n { width: 40%; } }
+  #umnhf-alt-sn, #umnhf-alt-n { width: 100%; } }
 @media (max-width: 775px) { #umnhf-alt.umnhf { min-height: auto; }
   #umnhf-alt-sn { padding-left: 17px; width: 100%; }
   #umnhf-alt-n { display: none; float: none; width: 100%; height: auto; padding: 0; }
@@ -102,7 +105,7 @@ body { margin: 0; }
 #umnhf-uf a:hover, #umnhf-uf a:active, #umnhf-uf a:focus { text-decoration: underline; }
 #umnhf-uf p { margin: 0; }
 #umnhf-uf p, #umnhf-uf a, #umnhf-uf li, #umnhf-uf h3 { text-decoration: none; color: #404d5b; }
-#umnhf-uf h2.umnhf-f-title { margin: 0 0 15px; padding: 16px 8px 16px 54px; text-transform: uppercase; color: #404d5b; border-bottom: 1px solid #dbdbdb; font-family: Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; font-size: 16px; font-weight: normal; }
+#umnhf-uf h2.umnhf-f-title { margin: 0 0 15px; padding: 16px 8px 16px 128px; text-transform: uppercase; color: #404d5b; border-bottom: 1px solid #dbdbdb; font-family: Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; font-size: 16px; font-weight: normal; }
 #umnhf-uf h3.umnhf-f-title, #umnhf-uf p.umnhf-f-title { margin: 0; text-transform: uppercase; color: #404d5b; font-family: Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; font-size: 14px; font-weight: bold; }
 
 #umnhf-uf-ci, #umnhf-uf-sm { float: left; clear: both; width: 40%; padding: 0 0 0 128px; font-style: normal; }
@@ -124,7 +127,7 @@ body { margin: 0; }
 #umnhf-uf-sm ul a { display: inline-block; width: 16px; height: 16px; transition: background-color 0.3s ease 0s, border-color 0.3s ease 0s; opacity: 1; filter: alpha(opacity=100); }
 #umnhf-uf-sm ul a:hover, #umnhf-uf-sm ul a:focus { border-color: transparent; background-color: #eaecef; opacity: 0.75; filter: alpha(opacity=75); }
 
-#umnhf-uf-ul { position: absolute; top: 0; right: 0; width: 40%; padding-right: 54px; }
+#umnhf-uf-ul { position: absolute; top: 0; right: 0; width: 40%; padding-right: 128px; }
 #umnhf-uf-ul ul { float: right; margin: 0; padding: 30px 0 5px 0; list-style-type: none; text-align: right; }
 #umnhf-uf-ul ul li { line-height: 1.5rem; }
 
@@ -146,9 +149,9 @@ body { margin: 0; }
 #umnhf-f #umnhf-f-myu { display: none; }
 #umnhf-f ul, #umnhf-f p { margin: 0 0 16px 0; padding: 0; list-style: none; color: #404d5b; }
 #umnhf-f .umnhf-f-title { text-transform: uppercase; color: #404d5b; font-family: Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; }
-#umnhf-f h2.umnhf-f-title { margin: 0 -54px 15px -54px; padding: 16px 8px 16px 54px; text-transform: uppercase; color: #404d5b; border-bottom: 1px solid #dbdbdb; font-family: Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; font-size: 16px; font-weight: normal; }
+#umnhf-f h2.umnhf-f-title { margin: 0 -128px 15px -128px; padding: 16px 8px 16px 128px; text-transform: uppercase; color: #404d5b; border-bottom: 1px solid #dbdbdb; font-family: Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; font-size: 16px; font-weight: normal; }
 #umnhf-f h3.umnhf-f-title { margin: 0; text-transform: uppercase; color: #404d5b; font-family: Helvetica, "Helvetica Neue", "Futura", Verdana, "Geneva", sans-serif; font-size: 14px; font-weight: bold; }
-#umnhf-f small { display: block; padding: 5px 54px; text-align: center; font-size: 0.8rem; line-height: 1rem; }
+#umnhf-f small { display: block; padding: 5px 128px; text-align: center; font-size: 0.8rem; line-height: 1rem; }
 #umnhf-f small a:link, #umnhf-f small a:active, #umnhf-f small a:visited { color: #404d5b; text-decoration: underline; }
 
 @media (max-width: 775px) { #umnhf-f.umnhf h2.umnhf-f-title { margin: 0; padding-left: 27px; }
