Bring back household-centric admin views
Resolve #7

Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,8 +58,13 @@
                     </li>
                     {% if is_granted('ROLE_ADMIN') %}
                     <li>
+                        <a href="{{ path('UMRA_Household') }}">
+                            Manage Members
+                        </a>
+                    </li>
+                    <li>
                         <a href="{{ path('sonata_admin_redirect') }}">
-                            Membership Administration
+                            Advanced Membership Administration
                         </a>
                     </li>
                     {% endif %}
