--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
@@ -1,7 +1,6 @@
 {% extends 'UMRAMemberBundle::nav.html.twig' %}
 
 {% block modulecontent -%}
-
     <div class="page-header">
         <h1>Households</h1>
     </div>
@@ -28,9 +27,6 @@
                     <li>
                         <a class="btn btn-primary btn-sm" href="{{ path('UMRA_Household_show', { 'id': entity.id }) }}">View</a>
                     </li>
-                    <li>
-                        <a class="btn btn-warning btn-sm" href="{{ path('UMRA_Household_edit', { 'id': entity.id }) }}">Edit</a>
-                    </li>
                 </ul>
                 </td>
             </tr>
@@ -41,4 +37,8 @@
     <a class="btn btn-primary" href="{{ path('UMRA_Household_new') }}">
         <span class="glyphicon glyphicon-plus"></span> Add
     </a>
+
+    <div class="navigation">
+        {{ knp_pagination_render(entities) }}
+    </div>
 {% endblock %}
