Add Register link to navbar for unauthenticated users
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -86,6 +86,11 @@
                             Login
                         </a>
                     </li>
+                    <li>
+                        <a href="{{ path('UMRA_register') }}">
+                            Register
+                        </a>
+                    </li>
                 </ul>
                 {% endif %}
             </nav>
